--- a/environment.yml
+++ b/environment.yml
@@ -39,6 +39,7 @@ dependencies:
     - atari-py==0.2.6
     - gym==0.15.4
     - opencv-python==4.1.2.30
+    - pycodestyle
     - psutil==5.6.7
     - pyglet==1.3.2
     - tensorflow-addons==0.6.0
