--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,9 @@ tensorflow-addons==0.12.1
 
 # There are a few dependencies you need to install first, check out:
 # https://github.com/openai/gym#installing-everything
-gym[atari,Box2D]==0.18.0
+gym[Box2D]==0.18.0
+atari_py==0.2.5
+
 # On Windows, install atari_py using:
 # pip install --no-index -f https://github.com/Kojoley/atari-py/releases atari_py
 
