--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,20 @@
 
 
 ##### Core scientific packages
-jupyter==1.0.0
-matplotlib==3.4.3
-numpy==1.19.5
-pandas==1.3.3
-scipy==1.7.1
+jupyter~=1.0.0
+matplotlib~=3.4.3
+numpy~=1.19.5
+pandas~=1.3.3
+scipy~=1.7.1
 
 ##### Machine Learning packages
-scikit-learn==1.0
+scikit-learn~=1.0
 
 # Optional: the XGBoost library is only used in chapter 7
-xgboost==1.4.2
+xgboost~=1.4.2
 
 # Optional: the transformers library is only using in chapter 16
-transformers==4.11.3
+transformers~=4.11.3
 
 ##### TensorFlow-related packages
 
@@ -27,70 +27,63 @@ transformers==4.11.3
 # you must install CUDA, cuDNN and more: see tensorflow.org for the detailed
 # installation instructions.
 
-tensorflow==2.6.0
+tensorflow~=2.6.0
 # Optional: the TF Serving API library is just needed for chapter 19.
-tensorflow-serving-api==2.6.0 # or tensorflow-serving-api-gpu if gpu
+tensorflow-serving-api~=2.6.0 # or tensorflow-serving-api-gpu if gpu
 
-tensorboard==2.6.0
-tensorboard-plugin-profile==2.5.0
-tensorflow-datasets==4.4.0
-tensorflow-hub==0.12.0
-tensorflow-probability==0.14.1
+tensorboard~=2.7.0
+tensorboard-plugin-profile~=2.5.0
+tensorflow-datasets~=4.4.0
+tensorflow-hub~=0.12.0
+tensorflow-probability~=0.14.1
 
 # Optional: only used in chapter 13.
-# NOT AVAILABLE ON WINDOWS
-tfx==1.3.0
+tfx~=1.3.0
 
 # Optional: only used in chapter 16.
-# NOT AVAILABLE ON WINDOWS
-tensorflow-addons==0.14.0
+tensorflow-addons~=0.14.0
 
 ##### Reinforcement Learning library (chapter 18)
 
 # There are a few dependencies you need to install first, check out:
 # https://github.com/openai/gym#installing-everything
-gym[Box2D]==0.21.0
-atari-py==0.2.5
+gym[Box2D,atari,accept-rom-license]~=0.21.0
 
-# On Windows, install atari_py using:
-# pip install --no-index -f https://github.com/Kojoley/atari-py/releases atari_py
-
-tf-agents==0.10.0
+tf-agents~=0.10.0
+ale-py~=0.7.2
 
 ##### Image manipulation
-Pillow==8.3.2
-graphviz==0.17
-opencv-python==4.5.3.56
-pyglet==1.5.21
+Pillow~=8.4.0
+graphviz~=0.17
+opencv-python~=4.5.3.56
+pyglet~=1.5.21
 
-#pyvirtualdisplay # needed in chapter 16, if on a headless server
+#pyvirtualdisplay # needed in chapter 18, if on a headless server
                   # (i.e., without screen, e.g., Colab or VM)
 
 
 ##### Additional utilities
 
 # Efficient jobs (caching, parallelism, persistence)
-joblib==0.14.1
+joblib~=0.14.1
 
 # Easy http requests
-requests==2.26.0
+requests~=2.26.0
 
 # Nice utility to diff Jupyter Notebooks.
-nbdime==3.1.0
+nbdime~=3.1.0
 
 # May be useful with Pandas for complex "where" clauses (e.g., Pandas
 # tutorial).
-numexpr==2.7.3
+numexpr~=2.7.3
 
-# Optional: these libraries can be useful in the classification chapter,
-# exercise 4.
-nltk==3.6.3
-urlextract==1.4.0
+# Optional: these libraries can be useful in the chapter 3, exercise 4.
+nltk~=3.6.5
+urlextract~=1.4.0
 
 # Optional: these libraries are only used in chapter 16
-ftfy==6.0.3
+ftfy~=6.0.3
 
 # Optional: tqdm displays nice progress bars, ipywidgets for tqdm's notebook support
-tqdm==4.62.3
-ipywidgets==7.6.5
-
+tqdm~=4.62.3
+ipywidgets~=7.6.5
