--- a/environment.yml
+++ b/environment.yml
@@ -3,11 +3,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - atari_py=0.2  # used only in chapter 18
-  - box2d-py=2.3  # used only in chapter 18
   - ftfy=6.0  # used only in chapter 16 by the transformers library
   - graphviz  # used only in chapter 6 for dot files
-  - gym=0.19  # used only in chapter 18
   - ipython=7.28  # a powerful Python shell
   - ipywidgets=7.6  # optionally used only in chapter 12 for tqdm in Jupyter
   - joblib=0.14  # used only in chapter 2 to save/load Scikit-Learn models
@@ -46,8 +43,7 @@ dependencies:
     - tfx~=1.3.0  # platform to deploy production ML pipelines
     - transformers~=4.11.3  # Natural Language Processing lib for TF or PyTorch
     - urlextract~=1.4.0  # optionally used in chapter 3, exercise 4
-    - ale-py~=0.7.2  # used only in chapter 18
-    - AutoROM~=0.4.2  # used only in chapter 18
+    - gym[box2d,atari,accept-rom-license]~=0.21.0  # used only in chapter 18
 
 # Specific lib versions to avoid conflicts
   - attrs=20.3
