--- a/environment.yml
+++ b/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - box2d-py  # used only in chapter 18, exercise 8
   - ftfy=6.0  # used only in chapter 16 by the transformers library
   - graphviz  # used only in chapter 6 for dot files
   - ipython=7.28  # a powerful Python shell
@@ -43,7 +44,7 @@ dependencies:
     - tfx~=1.3.0  # platform to deploy production ML pipelines
     - transformers~=4.11.3  # Natural Language Processing lib for TF or PyTorch
     - urlextract~=1.4.0  # optionally used in chapter 3, exercise 4
-    - gym[box2d,atari,accept-rom-license]~=0.21.0  # used only in chapter 18
+    - gym[atari,accept-rom-license]~=0.21.0  # used only in chapter 18
 
 # Specific lib versions to avoid conflicts
   - attrs=20.3
