Le annadi un  comentario

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 # Windows or when using a GPU. Please see the installation instructions in
 # INSTALL.md
 
+#Hola estoy colaborando con su proyecto
 
 ##### Core scientific packages
 jupyter~=1.0.0
